# Gait-Analysis

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  IMPLEMENTATION_PROGRESS.md  README.md  ROADMAP.md  SETUP.md  pyproject.toml  pytest.ini  requirements.txt  test_result.json
debug/: keypoints.npy  phases.npy  summary.txt  world_positions.npy
models/: rtmdet-n-person.onnx
output/debug/: keypoints.npy  phases.npy  summary.txt  world_positions.npy
results/: patient_001.json
scripts/: download_models.py  inspect_rtmdet.py  setup_env.py
src/stride/: __init__.py  __main__.py  cli.py
src/stride/calibration/: __init__.py  homography.py  spatial_mapper.py
src/stride/config/: __init__.py  presets.py  schema.py
src/stride/core/: __init__.py  keypoints.py  protocols.py  types.py
src/stride/data/: __init__.py  clinical.py  events.py  metrics.py  result.py
src/stride/detection/: __init__.py  rtmdet.py
src/stride/gait_events/: __init__.py  fog_detector.py  foot_strike.py  step_validator.py
src/stride/metrics/: __init__.py  per_quartile.py
src/stride/pipeline/: __init__.py  context.py  processor.py
src/stride/pose/: __init__.py  rtmpose.py  smoother.py
src/stride/segmentation/: __init__.py  phase_detector.py  quartile_engine.py  turn_detector.py
src/stride/tracking/: __init__.py  bytetrack.py
src/stride/visualization/: __init__.py  pose_debug_writer.py  skeleton_renderer.py
tests/: Healthy_result.json  README.md  __init__.py  conftest.py
tests/fixtures/: synthetic_gait.py
tests/integration/: test_pipeline_synthetic.py
tests/unit/: conftest.py  test_calibration.py  test_fog_detector.py  test_foot_strike.py  test_quartile_engine.py
