[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strider"
version = "0.1.0"
description = "Advanced clinical gait analysis system for neurological movement disorders"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Manas Maahir", email = "manasmaahir27@gmail.com"}
]
license = {text = "MIT"}

dependencies = [
    # Core inference
    "onnxruntime>=1.16.0",
    "mediapipe>=0.10.0",

    # Scientific computing
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",

    # Computer vision
    "opencv-python>=4.13.0",
    "pillow>=11.0.0",

    # API (Phase 3+)
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.9",

    # Export (Phase 2+)
    "reportlab>=4.2.0",

    # Visualization (optional)
    "plotly>=5.22.0",
    "matplotlib>=3.10.0",

    # Utilities
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.8.0",
    "mypy>=1.12.0",
    "ipython>=8.20.0",
]

gpu = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/manas-maahir/strider"
Documentation = "https://strider.readthedocs.io"
Repository = "https://github.com/manas-maahir/strider.git"

[tool.setuptools]
packages = ["stride"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (slower, may use test data)",
    "slow: Slow tests (use videos)",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (black handles this)
    "W503",   # line break before binary operator
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
